--- a/el_pollo_locco.css
+++ b/el_pollo_locco.css
@@ -9,10 +9,10 @@ body {
   align-items: center;
   flex-direction: column;
   height: 100vh;
-  background-image: url('img/5_background/desert.png');
+  /* background-image: url('img/5_background/desert.png');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
 }
 
 h1 {
@@ -21,10 +21,32 @@ h1 {
   text-shadow: 8px 2px 8px rgba(0, 0, 0, 0.5);
 }
 
+#startscreen {
+  justify-content: center;
+  background-image: url('./img/9_intro_outro_screens/start/startscreen_1.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 720px;
+  height: 480px;
+}
+
+#startscreen-btns-top {
+  display: flex;
+  justify-content: center;
+  height: 50px;
+  width: 100%;
+}
+
+.play-btn {
+  height: 32px;
+  width: 48px;
+}
+
 /* important for responsive design */
 canvas {
   background-color: black;
-  display: block; /* important for responsive design */
+  /* display: block; // important for responsive design */
 }
 
 /* Smartphones - - - - - - - - - - */
