--- a/el_pollo_locco.css
+++ b/el_pollo_locco.css
@@ -47,18 +47,6 @@ h1 {
   text-shadow: 8px 2px 8px rgba(0, 0, 0, 0.5);
 }
 
-/* === Game Container === */
-#game-container {
-  position: relative;
-  width: 100vw; /* Ändere die Breite auf 100vw */
-  height: 100vh; /* Ändere die Höhe auf 100vh */
-  max-width: 720px; /* Setze eine maximale Breite */
-  max-height: 480px; /* Setze eine maximale Höhe */
-  margin: 0 auto; /* Zentriere den Container */
-  /* height: 480px;
-  width: 720px; */
-}
-
 /* === Startscreen === */
 #startscreen {
   position: relative;
@@ -138,17 +126,29 @@ h1 {
   cursor: pointer;
 }
 
+/* === Game Container === */
+#game-container {
+  position: relative;
+  width: 720px;
+  height: 480px;
+  margin: 0 auto; /* Zentriere den Container */
+}
+
 /* === Canvas === */
 #canvas-container {
   position: relative;
   width: 100%;
   height: 100%;
+  /* width: 720px;
+  height: 480px; */
 }
 
 canvas {
   position: absolute;
-  height: 100%;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
   background-color: black;
   border-radius: 24px;
   border: 5px solid rgba(0, 0, 0, 0.5);
