--- a/el_pollo_locco.css
+++ b/el_pollo_locco.css
@@ -47,6 +47,10 @@ h1 {
   text-shadow: 8px 2px 8px rgba(0, 0, 0, 0.5);
 }
 
+p {
+  font-family: 'zabars', Arial, Helvetica, sans-serif;
+}
+
 /* === Startscreen === */
 #startscreen {
   position: relative;
@@ -58,7 +62,7 @@ h1 {
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 24px;
-  border: 5px solid rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 .startscreen-top-buttons {
@@ -129,7 +133,7 @@ h1 {
 }
 
 #mute-button {
-  background-image: url('img/10_other/sound_off.svg');
+  background-image: url('img/10_other/sound_on.svg');
 }
 
 /* === Canvas === */
@@ -149,7 +153,7 @@ canvas {
   height: 100%;
   background-color: black;
   border-radius: 24px;
-  border: 5px solid rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 /* === Endscreen === */
@@ -157,27 +161,29 @@ canvas {
   position: relative;
   width: 720px;
   height: 480px;
-  justify-content: center;
+  /* justify-content: center; */
   background-image: url('img/5_background/second_half_background.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  border-radius: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 #endscreen-text {
   position: absolute;
   width: 100%;
   height: 100%;
-  /* z-index: 1; */
+  border-radius: 24px;
 }
 
 .endscreen-top-buttons {
   display: flex;
   justify-content: center;
-  /* align-items: center; */
   height: 50px;
   width: 100%;
   padding-top: 32px;
+  gap: 48px;
 }
 
 .endscreen-top-buttons button:hover {
@@ -185,24 +191,26 @@ canvas {
   background-color: rgb(255, 198, 0);
 }
 
-.restart-btn {
+.endscreen-button {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 8px;
-  height: 40px;
-  width: 140px;
+  padding: 16px 40px;
+  /* height: 40px;
+  width: 140px; */
   border-radius: 16px;
-  font-size: 20px;
-  font-weight: bold;
+  border-width: 0;
+  font-size: 36px;
+  /* font-weight: bold; */
   background-color: rgb(255, 220, 0);
-  color: white;
+  /* color: wshite; */
   border-color: white;
   border-style: solid;
   z-index: 2;
 }
 
-.restart-btn-img {
+.endscreen-btn-img {
   height: 28px;
 }
 
