--- a/el_pollo_locco.css
+++ b/el_pollo_locco.css
@@ -54,6 +54,7 @@ p {
 /* === Game Container === */
 #game-container {
   position: relative;
+  display: block;
   /* width: 720px;
   height: 480px; */
 }
@@ -166,7 +167,8 @@ p {
 
 /* === Canvas === */
 #canvas-container {
-  position: relative;
+  /* position: relative; */
+  display: block;
   /* width: 100%;
   height: 100%; */
   width: 720px;
@@ -174,9 +176,10 @@ p {
 }
 
 canvas {
-  position: absolute;
+  /* position: absolute;
   top: 0;
-  left: 0;
+  left: 0; */
+  display: block;
   width: 100%;
   height: 100%;
   background-color: black;
@@ -242,10 +245,79 @@ canvas {
   height: 28px;
 }
 
+.mobile-btns {
+  position: relative;
+  display: none;
+  justify-content: space-between;
+  align-items: center;
+  bottom: 100px;
+  z-index: 5;
+}
+
+.mobile-btns-left,
+.mobile-btns-right {
+  display: flex;
+  gap: 32px;
+  padding: 16px;
+}
+
+.mobile-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  background-color: rgb(255, 209, 16);
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  flex-shrink: 0;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+#btnJump {
+  -webkit-transform: rotate(90deg); /* Safari and Chrome */
+  -moz-transform: rotate(90deg); /* Firefox */
+  -ms-transform: rotate(90deg); /* IE 9 */
+  -o-transform: rotate(90deg); /* Opera */
+  transform: rotate(90deg);
+}
+
+#btnRefill {
+  font-size: 24px;
+}
+
+.mobile-btn-throw {
+  height: 32px;
+  width: 32px;
+}
+
+.mobile-btn:hover {
+  cursor: pointer;
+  background-color: rgb(255, 198, 0);
+}
+
 /* Smartphones - - - - - - - - - - */
 @media only screen and (max-width: 720px) {
+  h1 {
+    display: none;
+  }
+
+  #startscreen {
+    /* display: block; */
+    max-width: 720px;
+    /* width: 100vw; */
+    height: 100vh;
+    background-size: 100vw 100%;
+    border-radius: 0;
+  }
+
   canvas {
     width: 100%;
+  }
+
+  .mobile-btns {
+    display: flex !important;
   }
 }
 /* Smartphones - - - - - - - - - - */
@@ -255,6 +327,24 @@ canvas {
   }
   canvas {
     height: 100vh;
+  }
+
+  .mobile-btns {
+    display: flex !important;
+  }
+
+  #startscreen {
+    /* max-width: 720px; */
+    width: 100vw;
+    height: 100vh;
+    background-size: 100vw 100%;
+    border-radius: 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .mobile-btns {
+    display: none;
   }
 }
 
