--- a/el_pollo_locco.css
+++ b/el_pollo_locco.css
@@ -435,6 +435,29 @@ canvas {
   padding-bottom: 8px;
 }
 
+#overlay-rotate-device {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 48px;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(255, 186, 0);
+  z-index: 10;
+}
+
+#overlay-rotate-device img {
+  height: 200px;
+}
+
+#overlay-rotate-device p {
+  font-size: 48px;
+}
+
 /* Smartphones - - - - - - - - - - */
 @media only screen and (max-width: 720px) {
   h1 {
@@ -445,8 +468,9 @@ canvas {
     width: 100vw !important;
   }
 
-  #startscreen {
-    width: 100%;
+  #startscreen,
+  #endscreen {
+    width: 100% !important;
     /* height: auto;
     max-height: 480px; */
   }
@@ -479,7 +503,7 @@ canvas {
 
   #startscreen,
   #enscreen {
-    height: 100%;
+    height: 100% !important;
   }
 }
 
@@ -490,6 +514,12 @@ canvas {
     width: 100%;
     height: calc((100vw / 720) * 480);
     aspect-ratio: 720 / 480;
+  }
+}
+
+@media (max-width: 650px) {
+  #overlay-rotate-device {
+    display: flex;
   }
 }
 
